fixed time at top0 to be 12 hour clock, added some mobile responsiveness so grid is wider on mobile, and added images for readme

--- a/assets/style.css
+++ b/assets/style.css
@@ -62,3 +62,10 @@ footer {
   text-align: center;
   padding: 2% 0;
 }
+
+@media (max-width: 500px) {
+  .container {
+    width: 100%;
+    padding: 0px;
+  }
+}
